<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.scan_qr_code.ScanQrCodeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTopContainer"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/rectangle_bottom_round"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/llBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/ivback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_icon_ionic_ios_arrow_back" />

                <TextView
                    android:id="@+id/tvbacktext"
                    style="@style/regular_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/back"
                    android:textColor="@color/white2"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/ivback" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvQrTitle"
                style="@style/regular_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_qr_code"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvQrSubTitle"
                style="@style/regular_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_check_in"
                android:textColor="@color/white2"
                android:textSize="14sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQrTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.budiyev.android.codescanner.CodeScannerView
            android:id="@+id/scanner_view"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="40dp"
            app:layout_constraintBottom_toTopOf="@+id/btnCheckIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTopContainer"
            app:maskVisible="false" />

        <Button
            android:id="@+id/btnCheckIn"
            style="@style/regular_semi_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#30A0EC"
            android:paddingVertical="15dp"
            android:text="@string/click_to_check_in"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayoutProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>